# oraclesettle-backend

./: .env  .gitignore  Cargo.toml  ReadMe  oraclesettle.db  oraclesettle.db-shm  oraclesettle.db-wal
abi/: OracleSettle.json
migrations/: 20260204111335_create_markets.sql  20260204113436_create_reports.sql  20260204120245_create_settlements.sql  20260205111941_create_batches.sql  20260210161851_outbox.sql
src/: lib.rs  main.rs  notneeded.rs  proof.rs  types.rs  worker.rs
src/eth/: client.rs  mod.rs  submit.rs
src/models/: outbox.rs
src/routes/: market.rs  mod.rs  report.rs  settlement.rs
