[package]
name = "oraclesettle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "uuid",
  "chrono"
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }



